Refactor InvertedIndex