@@ -30,48 +30,111 @@ public class InvertedIndex implements Serializable {
      * returns the corresponding key.
      */
     @NotNull
-    private final Map<String, Term> invertedIndex;   // a Term has a posting list
+    private final Map<String, Term> invertedIndex;   // each Term has its own posting list
 
     /**
-     * The {@link Corpus} on which indexing is done.
+     * The (reference to the) {@link Corpus} on which indexing is done.
      */
     @NotNull
-    private final Corpus corpus;    // just the reference
+    private final Corpus corpus;
 
-    /*/** The phonetic hash. */   /*  // TODO : implement phoneticHash
-    @NotNull
-    private final ConcurrentHashMap<String, List<Term>> phoneticHash;
-    */
+//    /** The phonetic hash. */  // TODO : implement phoneticHash
+//    @NotNull
+//    private final ConcurrentHashMap<String, List<Term>> phoneticHash;
 
     /**
-     * Constructor.
+     * Constructor. Creates the instance and indexes the given {@link Corpus}.
+     *
+     * @param corpus The {@link Corpus} to be indexed.
      */
-    public InvertedIndex(@NotNull final Corpus corpus) {
+    public InvertedIndex(@NotNull final Corpus corpus) {    // TODO: test and benchmark
 
-        this.corpus = Objects.requireNonNull(corpus, "The corpus cannot be null");
+        this.corpus = Objects.requireNonNull(corpus);
 
-        AtomicReference<Double> progressValue = new AtomicReference<>((double) 0);   // used only to show the indexing progress
-        AtomicLong numberOfAlreadyProcessedDocuments = new AtomicLong(0);
+        AtomicLong numberOfAlreadyProcessedDocuments = new AtomicLong(0L);
+        Runnable indexingProgressPrinterInterrupter =
+                printIndexingProgressAndGetTheRunnableToInterruptPrinting(corpus, numberOfAlreadyProcessedDocuments);
 
+        try {
+            invertedIndex = indexCorpusAndGet(corpus, numberOfAlreadyProcessedDocuments);
+        } finally {
+            // Join the thread used to print the indexing progress
+            indexingProgressPrinterInterrupter.run();
+            System.out.println("\nIndexing ended");
+        }
+    }
+
+    protected static Map<String, Term> indexCorpusAndGet(
+            @NotNull Corpus corpus, @NotNull AtomicLong numberOfAlreadyProcessedDocuments) {    // TODO: test and benchmark
+
+        Predicate<Map.Entry<DocumentIdentifier, Document>> documentContentNotNullPredicate =
+                entry -> entry != null
+                        && entry.getKey() != null
+                        && entry.getValue() != null
+                        && entry.getValue().getContent() != null;
+
+        Map<String, Term> targetDataStructureForInvertedIndex = createEmptyInvertedIndex();
+        targetDataStructureForInvertedIndex.putAll(
+                corpus.getCorpus()
+                        .entrySet()
+                        .stream().unordered().parallel()
+                        .filter(documentContentNotNullPredicate)
+                        .map(InvertedIndex::getEntrySetOfTokensAndCorrespondingTermsFromADocument)
+                        .peek(ignored -> numberOfAlreadyProcessedDocuments.getAndIncrement())
+                        .flatMap(Collection::stream /*outputs all entries from all the documents*/)
+                        .collect(
+                                Collectors.toMap(
+                                        Map.Entry::getKey,
+                                        Map.Entry::getValue,
+                                        Term::merge /* Merge terms with the same token */)));
+
+        return targetDataStructureForInvertedIndex;
+    }
+
+    @NotNull
+    protected static Set<Map.Entry<String, Term>> getEntrySetOfTokensAndCorrespondingTermsFromADocument(
+            @NotNull Map.Entry<@NotNull DocumentIdentifier, @NotNull Document> entryFromCorpusRepresentingOneDocument) {    // TODO: test and benchmark
+
+        DocumentIdentifier docIdThisDocument = entryFromCorpusRepresentingOneDocument.getKey();
+        Document document = entryFromCorpusRepresentingOneDocument.getValue();
+        List<String> tokensFromCurrentDocument = Utility.tokenize(document);   // TODO : tokenization should return as a map also the position where the token is found in the document (for phrase query)
+
+        return tokensFromCurrentDocument
+                .stream().unordered().parallel()
+                .map(aToken ->
+                        new AbstractMap.SimpleEntry<>(
+                                aToken,
+                                new Term(new PostingList(new Posting(docIdThisDocument))/*TODO: resee this*/, aToken)))
+                .collect(
+                        Collectors.toConcurrentMap(
+                                Map.Entry::getKey,
+                                Map.Entry::getValue))
+                .entrySet();
+    }
+
+    @NotNull
+    private static Map<String, Term> createEmptyInvertedIndex() {
+        final Map<String, Term> invertedIndex;
         short invertedIndexType = Short.parseShort(Properties.appProperties.getProperty("index.dataStructure.type"));
         switch (invertedIndexType) {
-            case 1:
-                invertedIndex = new ConcurrentHashMap<>();
-                break;
-            case 2:
-                invertedIndex = new PatriciaTrie<>();
-                break;
-            default:    // 0 or anything else
-                invertedIndex = new Hashtable<>();
+            case 1 -> invertedIndex = new ConcurrentHashMap<>();
+            case 2 -> invertedIndex = new PatriciaTrie<>();
+            default ->    // 0 or anything else
+                    invertedIndex = new Hashtable<>();
         }
+        return invertedIndex;
+    }
 
-        ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(0);
+    @NotNull
+    private Runnable printIndexingProgressAndGetTheRunnableToInterruptPrinting(@NotNull Corpus corpus, AtomicLong numberOfAlreadyProcessedDocuments) {
+        AtomicReference<Double> progressValue = new AtomicReference<>(0d);   // used only to show the indexing progress
+        ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
         Thread progressControllerThread = new Thread(() -> {
-            final double epsilon = 0.001;
+            final double EPSILON = 0.001;
             double oldProgressValue = progressValue.get();
             progressValue.set(Math.round((0.0 + numberOfAlreadyProcessedDocuments.get()) / corpus.size() * 10000) / 100.0);
             String currentProgress = "";
-            if (progressValue.get() - oldProgressValue > epsilon) {
+            if (progressValue.get() - oldProgressValue > EPSILON) {
                 currentProgress = progressValue.toString();
                 System.out.print(currentProgress + " % \t ");
             }
@@ -84,71 +147,28 @@ public class InvertedIndex implements Serializable {
         final int DELAY_PROGRESS_CONTROLLER = 5;    // seconds
         scheduler.scheduleWithFixedDelay(progressControllerThread, DELAY_PROGRESS_CONTROLLER, DELAY_PROGRESS_CONTROLLER, TimeUnit.SECONDS);
 
-        // Indexing
-        Predicate<Map.Entry<DocumentIdentifier, Document>> documentContentNotNullPredicate =
-                entry -> entry != null && entry.getKey() != null && entry.getValue() != null && entry.getValue().getContent() != null;
-        invertedIndex.putAll(
-                corpus.getCorpus()
-                        .entrySet()
-                        .stream().unordered().parallel()
-                        .filter(documentContentNotNullPredicate)
-                        .map(anEntry -> {
-                            List<String> tokens = Utility.tokenize(anEntry.getValue());   // TODO : tokenization should return as a map also the position where the token is found in the document (for phrase query)
-                            DocumentIdentifier docIdThisDocument = anEntry.getKey();
-
-                            // Return a Map having tokens as keys and the corresponding List<Terms> as values, for the document in this entry
-                            Set<Map.Entry<String, Term>> entrySet =
-                                    tokens.stream().unordered().parallel()
-                                            .map(aToken -> new AbstractMap.SimpleEntry<>(aToken, new Term(new PostingList(new Posting(docIdThisDocument))/*TODO: resee this*/, aToken)))
-                                            .collect(
-                                                    Collectors.toConcurrentMap(
-                                                            Map.Entry::getKey,
-                                                            Map.Entry::getValue,
-                                                            (term1, term2) -> {  // Merge terms with the same token
-                                                                term1.merge(term2);
-                                                                return term1;
-                                                            }
-                                                    )
-                                            )
-                                            .entrySet();
-                            numberOfAlreadyProcessedDocuments.getAndIncrement();
-                            return entrySet;
-                        })
-                        .flatMap(Collection::stream /*outputs all entries (token,term) from all the documents*/)
-                        .collect(
-                                Collectors.toMap(
-                                        Map.Entry::getKey,
-                                        Map.Entry::getValue,
-                                        (term1, term2) -> {  // Merge terms with the same token
-                                            term1.merge(term2);
-                                            return term1;
-                                        }
-                                )
-                        )
-        );
-
-        // Join the thread used to print the indexing progress
-        scheduler.shutdown();
-        try {
-            short awaitTermination = 1;    // s
-            if (!scheduler.awaitTermination(awaitTermination, TimeUnit.SECONDS)) {
-                System.err.println("Still waiting for thread termination after " + awaitTermination + " s.");
+        return () -> {
+            scheduler.shutdown();
+            try {
+                short awaitTermination = 1;    // s
+                if (!scheduler.awaitTermination(awaitTermination, TimeUnit.SECONDS)) {
+                    System.err.println("Still waiting for thread termination after " + awaitTermination + " s.");
+                }
+            } catch (InterruptedException e) {
+                System.err.println("Indexing progress controller thread not joined.");
+                e.printStackTrace();
             }
-        } catch (InterruptedException e) {
-            System.err.println("Indexing progress controller thread not joined.");
-            e.printStackTrace();
-        }
-        System.out.println("\nIndexing ended");
+        };
     }
 
     /**
      * @return the dictionary as sorted {@link java.util.List} of {@link String}s (the terms).
      */
-    public List<String> getDictionary() {
+    public List<String> getDictionary() {   // TODO: test and benchmark
         return invertedIndex.keySet()
                 .stream().sequential()
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -168,7 +188,7 @@ public class InvertedIndex implements Serializable {
      * @return The {@link PostingList} associated with the desired term or null
      * if it is not found in this {@link InvertedIndex}.
      */
-    public final PostingList getPostingList(String normalizedToken) {
+    public final PostingList getPostingListForToken(String normalizedToken) {   // TODO: test and benchmark
         Term t = invertedIndex.get(normalizedToken);
         return t == null ? null : t.getPostingList();
     }
